panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__generic__test_unevaluated_assocs_are_type_checked.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/generic/test_unevaluated_assocs_are_type_checked.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/generic/test_unevaluated_assocs_are_type_checked.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `int` 42)
         (declaration p~3 `ptr<int>` (addressof (name a~2 `int`)))
         (return
            (generic
               (name main~0 `fn() -> int`)
               (assoc `int` (multiply (name p~3 `ptr<int>`) 2))
               (assoc default 42))))))

----- stderr -----
